worked on validating user inputs

--- a/budget_bridge/src/main/resources/groupid/budget_setup.fxml
+++ b/budget_bridge/src/main/resources/groupid/budget_setup.fxml
@@ -64,11 +64,13 @@
                         <VBox spacing="6.0">
                             <Label text="Insurance:" styleClass="setup-field-label"/>
                             <TextField fx:id="tfIns" promptText="Monthly amount" styleClass="setup-input"/>
+                            <Label fx:id="errIns" textFill="red" visible="false"/>
                         </VBox>
                         
                         <VBox spacing="6.0">
                             <Label text="Other Debt:" styleClass="setup-field-label"/>
                             <TextField fx:id="tfDebt" promptText="Monthly amount" styleClass="setup-input"/>
+                            <!-- <Label fx:id="errDebt" textFill="red" visible="false"/> -->
                         </VBox>
                     </VBox>
                 </VBox>
