the profile icon logic is working, profile page now shows whatever your currently selected profile icon is, new users will always start with the defaul profile icon that they will be able to switch back to at any time if they want to

--- a/budget_bridge/src/main/resources/groupid/profile.fxml
+++ b/budget_bridge/src/main/resources/groupid/profile.fxml
@@ -124,7 +124,7 @@
                <Label text="🎭 Current Icon" styleClass="card-title"/>
                <VBox alignment="CENTER" spacing="10" VBox.vgrow="ALWAYS">
                   <FontIcon fx:id="currentProfileIcon" iconSize="48" styleClass="current-profile-icon"/>
-                  <Label fx:id="currentIconName" text="Default Avatar" styleClass="current-icon-name"/>
+                  <!-- <Label fx:id="currentIconName" text="Default Avatar" styleClass="current-icon-name"/> -->
                </VBox>
             </VBox>
 
