added a warning for when expenses are larger than incomes in budget_setup screen

--- a/budget_bridge/src/main/resources/groupid/main_screen.fxml
+++ b/budget_bridge/src/main/resources/groupid/main_screen.fxml
@@ -55,6 +55,7 @@
                     <HBox alignment="CENTER" styleClass="total-container">
                         <Label fx:id="totalBudgetLabel" styleClass="total-label" text="Total: $0.00" />
                     </HBox>
+                    <Label fx:id="deficitWarningLabel" styleClass="soft-warning" textFill="red" visible="false"/>
                 </VBox>
             </VBox>
             
